traversal.snake.Snake.scala.error
Compilation error:
Snake:59: error: reassignment to val
    fini = fini
         ^